@@ -982,8 +982,8 @@ read
       <sect2>
 	<title>Birth of pbuilder</title>
 	<para>
-	  wanna-build (sbuild) was quite difficult to set up, and it was 
-	  never a Debian package. dbuild was something that predated
+	  wanna-build (sbuild) was (at the time of year 2001) quite difficult to 
+	  set up, and it was never a Debian package. dbuild was something that predated
 	  Build-Depends.
 	</para>
 	<para>
