@@ -8,6 +8,12 @@ AUTHORS and THANKS, for the list of people who have been working on this.
 The man pages pbuilder.8, pbuilderrc.5, and pdebuild.1 should give some
 info on how to use pbuilder.
 
+There is a DocBook documentation, translated to html format, 
+pbuilder-doc.html. It is the most complete documentation of pbuilder available.
+
 
 Junichi Uekawa.
-30 Sep 2001 Midnight.
+Initially, 30 Sep 2001 Midnight.
+Updated on 11 Jan 2004
+
+$Id$
