@@ -1,5 +1,11 @@
 2004-01-11  Junichi Uekawa  <dancer@debian.org>
 
+	* testsuite/run-test.sh: change to pbuilder test, instead of UML.
+
+	* testsuite/run-test-uml.sh: split out UML test
+
+	* README: tried updating the documentation.
+
 	* Documentation/pbuilder-doc.css: Change css so that it's black on white, not white on black.
 
 2004-01-10  Junichi Uekawa  <dancer@debian.org>
